--- a/index.css
+++ b/index.css
@@ -265,12 +265,60 @@ body {
   }
 }
 
-@media (max-width:400px) {
-  .btn{
+@media (min-width: 414px) {
+  .btn {
     border-radius: 1000px;
     width: 100px;
     height: 50px;
+    left: 290px;
+    top: 440px;
   }
 }
 
+@media (min-width: 375px){
+  .btn {
+    border-radius: 1000px;
+    width: 100px;
+    height: 50px;
+    left: 290px;
+    top: 440px;
+  }
 
+  
+}
+
+@media (min-width: 360px){
+  .btn {
+    border-radius: 1000px;
+    width: 100px;
+    height: 50px;
+    left: 250px;
+    top: 440px;
+  }
+}
+
+@media (min-width: 280px){
+  .show{
+    left: 20px;
+  }
+  
+  .showspace{
+    left: 20px;
+    
+  }
+  
+  .onlyspace{
+    left: 20px;
+
+  }
+}
+
+@media (min-width:320px){
+  .btn {
+    border-radius: 1000px;
+    width: 100px;
+    height: 50px;
+    left: 250px;
+    top: 440px;
+  }
+}
