--- a/index.css
+++ b/index.css
@@ -98,8 +98,8 @@
   width: 100%;
   height: 100px;
   background-color: wheat;
-  position: absolute;
-  bottom: 10px;
+  position: fixed;
+  /* bottom: 10px; */
 }
 
 .m {
@@ -187,7 +187,7 @@ body {
   }
 
   .btn {
-    top: 600px;
+    top: 580px;
     left: 110px;
   }
   .text1 {
